# dm_OCPS

./: Jenkinsfile.conda  README.rst  pyproject.toml  setup.py
conda/: meta.yaml
doc/: developer-guide.rst  version_history.rst
python/lsst/dm/OCPS/: __init__.py  ocps_csc.py
tests/: test_csc.py
